[gd_scene load_steps=3 format=3 uid="uid://bmmm7hdnqflfv"]

[ext_resource type="FontFile" uid="uid://mi671s0n2df8" path="res://Assets/Xolonium-Regular.ttf" id="1_1rerr"]
[ext_resource type="Script" uid="uid://btthwuse8qjox" path="res://Scripts/menu.gd" id="1_xhh6f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -49.0
offset_right = 115.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Human" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "vs Human"

[node name="Computer" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "vs Computer"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Human")
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="SubMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -49.0
offset_right = 115.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Easy" type="Button" parent="SubMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Hard")
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "Easy"

[node name="Medium" type="Button" parent="SubMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "Medium"

[node name="Hard" type="Button" parent="SubMenu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Easy")
theme_override_fonts/font = ExtResource("1_1rerr")
theme_override_font_sizes/font_size = 32
text = "Hard"

[connection signal="pressed" from="MainMenu/Human" to="." method="_on_human_pressed"]
[connection signal="pressed" from="MainMenu/Computer" to="." method="_on_computer_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SubMenu/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="SubMenu/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="SubMenu/Hard" to="." method="_on_hard_pressed"]
